@@ -284,6 +284,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MultiFiles.cpp"
+				>
+			</File>
+			<File
 				RelativePath="stdafx.cpp"
 				>
 				<FileConfiguration
@@ -338,6 +342,10 @@
 			</File>
 			<File
 				RelativePath=".\BaseSplitterFileEx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MultiFiles.h"
 				>
 			</File>
 			<File
